# datasentics-lab

./: .env.dist  .gitignore  README.md  env-init.sh  environment.yml  poetry.toml  pyproject.toml
.github/workflows/: format_check.yml  main.yml
dslab/: dbpath.py
src/dslab/: dbpath.py  iterable.py
src/dslabs/: dbpath.py  main.py
src/dslabs/dbpathlib/: dbpath.py
