[tool.poetry]
name = "datasentics-lab"
version = "0.0.2"
description = "DataSentics Lab - experimental open-source repo"
readme = "README.md"
repository = "https://github.com/DataSentics/datasentics-lab"
homepage = "https://github.com/DataSentics/datasentics-lab"

license = "MIT"

authors = [
    "Adam Volny <adam.volny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "dslab", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
requests = "^2.25.1"
azure-storage-blob = "^12.8.0"

[tool.poetry.dev-dependencies]
pylint = "2.4.*"
pytest = "5.2.*"
flake8 = "^3.9.1"
black = "^20.8b1"
poethepoet = "^0.10.0"
pyspark = "^3.0.0"

[tool.black]
line-length = 140

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
flake8 = "flake8 --ignore=E501,W503 src"

[repositories]
[repositories.datasentics]
url = "https://pkgs.dev.azure.com/dataengineerics/_packaging/dataengineerics/pypi/upload/"

